[gd_scene load_steps=8 format=3 uid="uid://dmnjt325mfjhg"]

[ext_resource type="Script" path="res://scripts/world_scripts/traps/falling_trap.gd" id="1_nhstc"]
[ext_resource type="Texture2D" uid="uid://djotss2qnd5nb" path="res://assets/Trap/Spike_B.png" id="2_ubnqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axah6"]
size = Vector2(32, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_083wy"]
size = Vector2(32, 305)

[sub_resource type="Animation" id="Animation_h4lsy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yht1v"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0), Vector2(3, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fall"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e76t5"]
_data = {
"RESET": SubResource("Animation_h4lsy"),
"shake": SubResource("Animation_yht1v")
}

[node name="FaillingSpikes" type="Node2D"]
script = ExtResource("1_nhstc")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -3.14159
texture = ExtResource("2_ubnqs")
hframes = 10
frame = 4

[node name="Hitbox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_axah6")

[node name="PlayerDetect" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2(0, 53.5)
shape = SubResource("RectangleShape2D_083wy")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e76t5")
}

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="PlayerDetect" to="." method="_on_player_detect_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
